<resources>
    <string name="app_name">CalculatorAPP</string>
    <string name="divide_sign">/</string>
    <string name="dot_symbol">.</string>
    <string name="multiply_sign">*</string>
    <string name="minus_sign">-</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="clr">CLR</string>
    <string name="add_sign">+</string>
    <string name="equal_sign">=</string>
    <string name="zero">0</string>
</resources>